{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 33,
  "lineage": "566c69a9-53e7-ae51-a759-1b721f54ce8d",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:route-table/rtb-08db9d2570fd6fb88",
            "id": "rtb-08db9d2570fd6fb88",
            "owner_id": "116981769615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-rtb-private-us-east-1a",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-rtb-private-us-east-1a",
              "Owner": "Platform",
              "Project": "HC"
            },
            "timeouts": null,
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:route-table/rtb-03cccc519939a96d8",
            "id": "rtb-03cccc519939a96d8",
            "owner_id": "116981769615",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-rtb-private-us-east-1b",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-rtb-private-us-east-1b",
              "Owner": "Platform",
              "Project": "HC"
            },
            "timeouts": null,
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036a78ebd3f73d61d",
            "route_table_id": "rtb-08db9d2570fd6fb88",
            "subnet_id": "subnet-0c48b92d5d5ab71e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba436403bf944c0",
            "route_table_id": "rtb-03cccc519939a96d8",
            "subnet_id": "subnet-06db4d42231938ca5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:security-group/sg-09518a3f8bfac92cc",
            "description": "Aurora ingress 5432 only from RDS Proxy",
            "egress": [],
            "id": "sg-09518a3f8bfac92cc",
            "ingress": [],
            "name": "HC-dev-sg-db",
            "name_prefix": "",
            "owner_id": "116981769615",
            "revoke_rules_on_delete": true,
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-db",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-db",
              "Owner": "Platform",
              "Project": "HC"
            },
            "timeouts": null,
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:security-group/sg-055f5302d0e01de30",
            "description": "Lambda egress 5432 to RDS Proxy; no ingress from Internet",
            "egress": [],
            "id": "sg-055f5302d0e01de30",
            "ingress": [],
            "name": "HC-dev-sg-lambda",
            "name_prefix": "",
            "owner_id": "116981769615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-lambda",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-lambda",
              "Owner": "Platform",
              "Project": "HC"
            },
            "timeouts": null,
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_rds_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:security-group/sg-0b35d71955be2d870",
            "description": "RDS Proxy 5432: ingress from Lambda; egress to DB",
            "egress": [],
            "id": "sg-0b35d71955be2d870",
            "ingress": [],
            "name": "HC-dev-sg-rds-proxy",
            "name_prefix": "",
            "owner_id": "116981769615",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-rds-proxy",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-sg-rds-proxy",
              "Owner": "Platform",
              "Project": "HC"
            },
            "timeouts": null,
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_from_proxy_ingress_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress 5432 a DB desde RDS Proxy",
            "from_port": 5432,
            "id": "sgrule-1665314205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09518a3f8bfac92cc",
            "security_group_rule_id": "sgr-0e5800416d9d6b1f3",
            "self": false,
            "source_security_group_id": "sg-0b35d71955be2d870",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.sg_db",
            "module.networking.aws_security_group.sg_rds_proxy",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_to_proxy_egress_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress 5432 de Lambda hacia RDS Proxy",
            "from_port": 5432,
            "id": "sgrule-591954462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-055f5302d0e01de30",
            "security_group_rule_id": "sgr-05884569d6904ef53",
            "self": false,
            "source_security_group_id": "sg-0b35d71955be2d870",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.sg_lambda",
            "module.networking.aws_security_group.sg_rds_proxy",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_from_lambda_ingress_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress 5432 al RDS Proxy desde Lambdas",
            "from_port": 5432,
            "id": "sgrule-2292462089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b35d71955be2d870",
            "security_group_rule_id": "sgr-0b5f029590f049509",
            "self": false,
            "source_security_group_id": "sg-055f5302d0e01de30",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.sg_lambda",
            "module.networking.aws_security_group.sg_rds_proxy",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "proxy_to_db_egress_5432",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress 5432 del RDS Proxy hacia DB",
            "from_port": 5432,
            "id": "sgrule-790347808",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b35d71955be2d870",
            "security_group_rule_id": "sgr-00fa7203f9be43461",
            "self": false,
            "source_security_group_id": "sg-09518a3f8bfac92cc",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.sg_db",
            "module.networking.aws_security_group.sg_rds_proxy",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:subnet/subnet-0c48b92d5d5ab71e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c48b92d5d5ab71e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116981769615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-private-us-east-1a",
              "Owner": "Platform",
              "Project": "HC",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-private-us-east-1a",
              "Owner": "Platform",
              "Project": "HC",
              "Tier": "private"
            },
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:subnet/subnet-06db4d42231938ca5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06db4d42231938ca5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116981769615",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-private-us-east-1b",
              "Owner": "Platform",
              "Project": "HC",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-private-us-east-1b",
              "Owner": "Platform",
              "Project": "HC",
              "Tier": "private"
            },
            "vpc_id": "vpc-088551c03dc48c750"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981769615:vpc/vpc-088551c03dc48c750",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-03078bcebf2de61b2",
            "default_route_table_id": "rtb-0339aba1e419ffcb7",
            "default_security_group_id": "sg-014598ee9394fba84",
            "dhcp_options_id": "dopt-0ae640f3a7a3b65b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-088551c03dc48c750",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0339aba1e419ffcb7",
            "owner_id": "116981769615",
            "tags": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-vpc",
              "Owner": "Platform",
              "Project": "HC"
            },
            "tags_all": {
              "Component": "networking",
              "DataClass": "PHI",
              "Env": "dev",
              "Name": "HC-dev-vpc",
              "Owner": "Platform",
              "Project": "HC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}